--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -63,7 +63,7 @@
 
     </section>
 
-    <section class="flex flex-col gap-4 lg:flex-row lg:justify-between lg:items-center responsive-padding">
+    <section class="flex flex-col gap-4 lg:flex-row lg:justify-between lg:items-center responsive-padding" data-aos="fade-up">
         <h2 class="text-4xl lg:text-6xl font-extrabold text-center lg:w-1/4 lg:text-left"><span class="text-red-600 font-cursive">Explore</span> Our Travel Services</h2>
         <div class="flex flex-col md:flex-row md:flex-wrap justify-center items-center gap-6 *:w-64 *:h-64 *:flex *:flex-col *:gap-2 *:items-center *:justify-center *:px-2 *:rounded-xl *:shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)]">
             <div>
@@ -91,7 +91,7 @@
 
     <div class="flex flex-col gap-20">
         <section class="bg-slate-100 flex flex-col gap-3 lg:flex-row lg:justify-between lg:items-center">
-            <div class="responsive-padding lg:p-0 lg:w-1/2 lg:pl-20">
+            <div class="responsive-padding lg:p-0 lg:w-1/2 lg:pl-20" data-aos="fade-right">
                 <h3 class="text-4xl font-extrabold mb-3"><span class="text-red-600 font-cursive">Unlock</span> Your Global Academic Dream</h3>
                 <p>Are you a scholar seeking to explore new horizons, meet new people, and achieve academic excellence abroad? Look no further! At Eaglespoint Horizon Limited, we specialize in simplifying the study abroad process, ensuring a seamless and enjoyable experience for you.
                 </p>
@@ -99,16 +99,16 @@
             <img src="{% static 'images/happy-graduand.jpeg' %}" class="w-full lg:max-w-96 h-auto max-h-64 lg:h-full object-cover">
         </section>
     
-        <section class="flex flex-col gap-3 lg:flex-row-reverse lg:justify-between lg:items-center">
-            <div class="responsive-padding lg:p-0 lg:w-1/2 lg:pr-20">
+        <section class="flex flex-col gap-3 lg:flex-row-reverse lg:justify-between lg:items-center" data-aos="fade-up">
+            <div class="responsive-padding lg:p-0 lg:w-1/2 lg:pr-20" data-aos="fade-left">
                 <h3 class="text-4xl font-extrabold mb-3 pr-20"><span class="text-red-600 font-cursive">Worry-less</span> about SAT, TOEFL, IELTS</h3>
                 <p>Our team of experienced and professional tutors will coach and prepare you to achieve excellent results and higher scores. With higher scores, you'll increase your chances of securing a scholarship!</p>
             </div>
             <img src="{% static 'images/man-2562325_1280.jpg' %}" class="w-full lg:max-w-96 h-auto max-h-64 object-cover">
         </section>
         
-        <section class="bg-slate-100 flex flex-col gap-3 lg:flex-row lg:justify-between lg:items-center">
-            <div class="responsive-padding lg:p-0 lg:w-1/2 lg:pl-20">
+        <section class="bg-slate-100 flex flex-col gap-3 lg:flex-row lg:justify-between lg:items-center" data-aos="fade-up">
+            <div class="responsive-padding lg:p-0 lg:w-1/2 lg:pl-20" data-aos="fade-right">
                 <h3 class="text-4xl font-extrabold mb-3"><span class="text-red-600 font-cursive">Enjoy</span> Flexible Learning Options</h3>
                 <p>Our services cater to both schools and individuals. For schools, we'll send a team of capable teachers to instruct students within their primary learning environment, ensuring a seamless integration with curricular activities. Individuals can join us at our conducive learning environment or opt for online courses, eliminating physical barriers.
                 </p>
@@ -117,7 +117,7 @@
         </section>
     </div>
 
-    <section class="testimonial responsive-padding relative bg-repeat py-8 bg-[100px] text-white" style="background-image: url({% static 'images/pattern4.svg' %}); background-color:blue;">
+    <section class="testimonial responsive-padding relative bg-repeat py-8 bg-[100px] text-white" style="background-image: url({% static 'images/pattern4.svg' %}); background-color:blue;" data-aos="fade-up">
         <!-- overlay -->
         <div class="absolute inset-0"></div>
         <!-- content -->
@@ -163,7 +163,7 @@
 
     </section>
 
-    <section class="responsive-padding flex flex-col gap-7 ">
+    <section class="responsive-padding flex flex-col gap-7" data-aos="fade-up">
         <h2 class="text-4xl font-semibold">Stay Informed with Our Blog</h2>
         <div class="flex flex-row flex-wrap gap-6 items-center justify-center">
             {% component "blog_card" title="The Ultimate Guide to Stress-Free Travel Planning" tag="Travel" imageUrl="{% static 'images/aiplane-window.jpeg' %}" excerpt="Traveling can be overwhelming, but with the right planning, it becomes an exciting experience. This blog will cover essential travel hacks, packing tips, and how to find the best flight deals." %} {% endcomponent %}
