--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -10,7 +10,9 @@
     {% comment %} <script src="https://unpkg.com/alpinejs" defer></script> {% endcomment %}
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.8/dist/cdn.min.js"></script>
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
-    
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     {% block styleblock %} {% endblock %}
@@ -201,6 +203,13 @@
     <script src="{% static 'js/helper_func.js' %}"></script>
     <script src="{% static 'js/utils.js' %}"></script>
     <script>
+        AOS.init({
+            duration: 600, 
+            easing: 'ease-in-out',
+            once: true,
+            offset: 100
+        });
+
         document.addEventListener('alpine:init', () => {
             Alpine.store('modal', {
                 openLoginModal: false,
