--- a/listing/templates/listing/details.html
+++ b/listing/templates/listing/details.html
@@ -142,7 +142,8 @@
                 </div>
                 <div class="flex flex-row lg:flex-col justify-center items-center gap-4">
                     {% component "button" label="Enquire Now" type="primary" width="full" %} {% endcomponent %}
-                    {% component "button" label="<i class='fa fa-whatsapp text-white'></i> WhatsApp" type="primary" extraclass="bg-green-600" width="full" %} {% endcomponent %}
+                    <a class="bg-green-600 text-white hover:bg-green-800 w-full px-5 py-2.5 rounded-lg flex justify-center items-center gap-2 cursor-pointer transition-all duration-300 ease-in-out" href="https://wa.me/+2349057339147?text=Hi" none=""><i class="fa fa-whatsapp text-white"></i> WhatsApp</a>
+    
                 </div>
             </div>
 
