add whatsapp enquiry

--- a/listing/templates/listing/details.html
+++ b/listing/templates/listing/details.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="flex flex-row lg:flex-col justify-center items-center gap-4">
                     {% component "button" label="Enquire Now" type="primary" width="full" %} {% endcomponent %}
-                    <a class="bg-green-600 text-white hover:bg-green-800 w-full px-5 py-2.5 rounded-lg flex justify-center items-center gap-2 cursor-pointer transition-all duration-300 ease-in-out" href="https://wa.me/+2349057339147?text=Hi" none=""><i class="fa fa-whatsapp text-white"></i> WhatsApp</a>
+                    <a class="bg-green-600 text-white hover:bg-green-800 w-full px-5 py-2.5 rounded-lg flex justify-center items-center gap-2 cursor-pointer transition-all duration-300 ease-in-out" href="{{whatsapp_link}}" none="" target="_blank"><i class="fa fa-lg fa-whatsapp text-white"></i> WhatsApp</a>
     
                 </div>
             </div>
