add 404 and error page

--- a/components/listingCard/template.html
+++ b/components/listingCard/template.html
@@ -1,4 +1,4 @@
-    <div class="relative mx-auto w-full rounded-xl shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)]">
+    <div class="relative mx-auto w-full rounded-xl shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)]" data-aos="fade-up">
       <a href="{{ href }}" class="relative inline-block w-full">
         <div class="rounded-lg bg-white shadow">
           <div class="relative flex h-52 justify-center overflow-hidden rounded-lg">
