--- a/core/templates/core/real_estate.html
+++ b/core/templates/core/real_estate.html
@@ -33,7 +33,7 @@
     {% component "stats_partner" %} {% endcomponent %}
 
     {% if listings %}
-        <section class="flex flex-col gap-6 responsive-padding" data-aos="fade-up" data-aos-duration="1000">
+        <section class="flex flex-col gap-6 responsive-padding">
             <h3 class="text-4xl font-semibold">Featured Listings</h3>
             <div class="relative">
 
