--- a/components/forms/login_form.html
+++ b/components/forms/login_form.html
@@ -12,7 +12,7 @@
         <p>New user? <a class="text-blue-700 underline hover:no-underline" href="{% url 'user:register' %}">Sign up</a></p>
         {% endif %}
         
-        <div id="error-message" class="text-red-500 bg-red-100 text-center text-sm p-2 w-max hidden"></div>
+        <div id="error-message" class="text-red-500 bg-red-100 text-center text-sm p-2 w-full hidden"></div>
 
         {% if messages %}
             {% for message in messages %}
