--- a/core/templates/error_pages/error.html
+++ b/core/templates/error_pages/error.html
@@ -1,7 +1,7 @@
 {% extends "core/base.html" %}
 {% load static %}
 
-{% block title %}Page Not Found - 404 Error{% endblock %}
+{% block title %}Access Denied{% endblock %}
 
 {% block content %}
     <div class="w-full flex flex-col items-center justify-center mt-9">
