--- a/adminv2/templates/adminv2/base.html
+++ b/adminv2/templates/adminv2/base.html
@@ -38,6 +38,14 @@
                     </a>
                 </li>
 
+                <li>
+                    <a class="w-full flex gap-1" href="{% url 'core:home' %}">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg>
+                    
+                        <span>Visit Website</span>
+                    </a>
+                </li>
+
                 <li class="mt-auto">  
                     <form method="POST" action="{% url 'user:logout' %}">
                         {% csrf_token %}
