--- a/core/templates/core/real_estate.html
+++ b/core/templates/core/real_estate.html
@@ -167,7 +167,7 @@
         <!-- Content -->
         <div class="relative z-10">
             <h2 class="text-2xl font-bold mb-4">Interested in Travels or Study Abroad?</h2>
-            {% component "button" label="Find out More" type="primary" %} {% endcomponent %}
+            {% component "button" label="Find out More" href="{% url 'core:home'%}" type="primary" %} {% endcomponent %}
         </div>
 
     </section>
