--- a/staticfiles/css/input.css
+++ b/staticfiles/css/input.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
+
 @source '../../**/templates/**/*.html';
 @source '../../components/**/*.html';
 @source '../../components/**/*.js';
@@ -40,8 +41,26 @@
       display: flex;
       white-space: nowrap;
       animation: infinite-scroll 20s linear infinite;
-    }
+  }
 
+  @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+  }
+  
+  @keyframes fadeOut {
+      from { opacity: 1; transform: translateY(0); }
+      to { opacity: 0; transform: translateY(-10px); }
+  }
+  
+  .fade-in {
+      animation: fadeIn 0.3s ease-out forwards;
+  }
+  
+  .fade-out {
+      animation: fadeOut 0.5s ease-in forwards;
+  }
+  
     /* Hide the clear button in Chrome, Edge, and Safari */
     input[type="search"]::-webkit-search-cancel-button {
       display: none;
